spacing bug fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1695,7 +1695,7 @@
 		font-weight: 700;
 		line-height: 1.3;
 		margin: 0 0 1em 0;
-		letter-spacing: -0.035em;
+		letter-spacing: 0em;
 	}
 
 		h1 a {
@@ -1724,7 +1724,7 @@
 		line-height: 1.5;
 		margin: 0 0 2em 0;
 		text-transform: lowercase;;
-		letter-spacing: 0.35em;
+		letter-spacing: 0em;
 	}
 
 		h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -2475,7 +2475,7 @@
 		font-size: 0.8em;
 		font-weight: 900;
 		height: 3.5em;
-		letter-spacing: -0.35em;
+		letter-spacing: 0em;
 		line-height: 3.45em;
 		overflow: hidden;
 		padding: 0 1.25em 0 1.6em;
@@ -2861,7 +2861,7 @@
 			border-bottom: 0;
 			color: inherit;
 			font-weight: 900;
-			letter-spacing: 0.35em;
+			letter-spacing: 0em;
 			margin: 0 0 2.5em 0;
 			text-decoration: none;
 			text-transform: lowercase;
@@ -2920,7 +2920,7 @@
 						border: 0;
 						font-size: 0.8em;
 						font-weight: 900;
-						letter-spacing: -0.35em;
+						letter-spacing: 0em;
 						text-transform: lowercase;
 					}
 
